# sol2-issue-1532

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/lib/: Bar.cpp  Bar.h  Foo.cpp  Foo.h  Lua.cpp  Lua.h  platform.h
